# image_to_ascii

./: README.md  setup.cfg  setup.py
.github/workflows/: publish-to-test-pypi.yml
examples/: ascii_text.txt  inverted_ascii_text.txt
src/rvmendillo_image_to_ascii/: __init__.py
