[metadata]
name = rvmendillo-image-to-ascii
version = 1.6.0
author = Rey Victor Mendillo
author_email = admin@rvmendillo.com
description = Generates and saves ASCII texts and colored images from pixels of an image file or URL
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rvmendillo/image_to_ascii
project_urls =
    Bug Tracker = https://github.com/rvmendillo/image_to_ascii/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Text Processing

[options]
package_dir =
    = src
packages = find:
install_requires =
    Pillow
    requests
python_requires = >=3.6

[options.packages.find]
where = src
